--- a/css/reset.css
+++ b/css/reset.css
@@ -38,7 +38,7 @@ blockquote, q {
 
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: "";
+  content: '';
   content: none;
 }
 
@@ -63,39 +63,3 @@ input, textarea, select {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
-
-@font-face {
-  font-family: "gangstergrotesk";
-  src: url(fonts/gangstergrotesk-regular.otf);
-}
-@font-face {
-  font-family: "MonumentGroteskTrial";
-  src: url(fonts/MonumentGroteskTrial-Semi-Mono.woff);
-}
-body {
-  background-color: #222222;
-  font-family: "MonumentGroteskTrial-Semi-Mono";
-  line-height: 1.5;
-  font-size: 24px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  color: #FFFFFF;
-  min-height: 100vh;
-}
-
-section {
-  width: 800px;
-}
-@media (max-width: 600px) {
-  section {
-    width: 350px;
-    font-size: 16px;
-  }
-}
-section p {
-  margin: 24px 0 0;
-}
-
-/*# sourceMappingURL=app.css.map */
